# PSC

./: CMakeLists.txt  README.md  build.gradle  headtrackerManager.cpp  headtrackerManager.h  serverManager.cpp  serverManager.h  test.cpp
Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
server/: CMakeLists.txt  audioManager.cpp  audioManager.h  config.h  convolutionFilter.cpp  convolutionFilter.h  headtrackerManager.cpp  headtrackerManager.h  serverManager.cpp  serverManager.h  test.cpp
server/include/: libhedrot.h  libhedrot_utils.h
server/sigpack/: sigpack.h
server/sigpack/fftw/: fftw.h
server/soundfile/: sigConfiguration.h
src/androidTest/java/test/crespin/client/: ExampleInstrumentedTest.java
src/main/: AndroidManifest.xml
src/main/java/test/crespin/client/: ClientListAdapter.java  Constants.java  MainActivity.java  MyAudioManager.java  TcpClient.java
src/main/res/layout/: activity_main.xml  list_item.xml
src/test/java/test/crespin/client/: ExampleUnitTest.java
